--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,20 +1,19 @@
-name: DamaDam Scraper
+name: DamaDam Scraper 🐱‍🏍
 
 on:
-  schedule:
-    - cron: "*/15 * * * *"   # every 15 minutes
-  workflow_dispatch:         # manual run option
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  run-scraper:
+  build:
     runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
